# kmerseek

./: .gitignore  24-kmerseek-kmer-visualization.ipynb  Cargo.toml  LICENSE  Makefile  README.md  ced9-bcl2-first25.manysearch.csv  ced9-bcl2-first25.multisearch.csv  codecov.yml  environment.yml  environment_mac_arm64.yml  environment_no_versions.yml  kmerseek_search.csv  kmerseekvisualization.py  pyproject.toml  rustfmt.toml  sourmash-search.csv  test_mixed_case.fasta  uniprotkb_taxonomy_name_Human_AND_revie_2025_02_06.fasta.gz.manysketch.csv
.cursor/rules/: protein-encoding.mdc  rust-idiomatic.mdc  sourmash-reference.mdc
.github/workflows/: CI.yml  black.yml  build-test.yml  ci.yml  coverage-python.yml  coverage-rust.yml  coverage.yml  lint-python-black.yml  lint-rust-cargo.yml  rust-fmt.yml
bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k16.scaled5.kmerseek.rocksdb/: LOG  LOG.old.1753403009203387  LOG.old.1753403043495677  LOG.old.1756848449403969  LOG.old.1756848496984095  LOG.old.1756849189556386
benches/: benchmark.rs  benchmark_cli.rs
examples/: builder_pattern_demo.rs  search_demo.rs  test_bcl2_processing.rs  test_equivalence.rs
scripts/: benchmark_cli.sh  benchmark_rust_only.sh
src/: lib.rs
src/kmerseek/: entity.py  extract_kmers.py  index.py  main.py  query.py  search.py  sig2kmer.py  sketch.py  uniprot.py
src/python/kmerseek/: extract_kmers.py  index.py  logging.py  main.py  search.py  sig2kmer.py  sketch.py  uniprot.py
src/rust/: aminoacid.rs  config.rs  encoding.rs  errors.rs  index.rs  io.rs  iterators.rs  kmer.rs  kmer_signature.rs  lib.rs  main.rs  metrics.rs  protein.rs  search.rs  signature.rs  types.rs  uniprot.rs
src/rust/tests/: aminoacid_test.rs  index_test.rs  mod.rs  search_tests.rs  test_aminoacid.rs  test_cli.rs  test_fixtures.rs  test_index.rs  test_kmer.rs  test_uniprot.rs  test_utils.rs  uniprot_test.rs
tests/: conftest.py  search_tests.rs  test_entity.py  test_index.py  test_search.py
tests/data/: protein1.fasta  protein2.fasta
tests/testdata/fasta/: bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k24.scaled5.sig.TRUE.zip.kmers.pq  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.manysketch.csv  ced9.fasta  ced9.fasta.manysketch.csv  test_compression.fasta  test_compression.fasta.zst
tests/testdata/fasta/bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.dayhoff.k8.scaled100.kmerseek.rocksdb/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1750985985874648  MANIFEST-000005  MANIFEST-000015
tests/testdata/fasta/bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k16.scaled5.kmerseek.rocksdb/: 000008.sst  000013.sst  000018.sst  000023.sst  000079.sst  000086.sst  000091.sst  IDENTITY  LOG  LOG.old.1750985645551421  LOG.old.1750985653558473  LOG.old.1750985971573067  LOG.old.1750985985822149  LOG.old.1753402943837641  LOG.old.1753403009176254  LOG.old.1753403043474081  LOG.old.1756848449385112  LOG.old.1756848496962831  LOG.old.1756848702009889  LOG.old.1756848776189230  LOG.old.1756849814465603  LOG.old.1756849817864366  LOG.old.1756849820971649  LOG.old.1756849826820867  LOG.old.1756849980999063  LOG.old.1756850110497276  LOG.old.1756850442388887  MANIFEST-000015  MANIFEST-000025  MANIFEST-000097
tests/testdata/index/: SOURMASH-MANIFEST.csv  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k15.scaled5.sig.zip.kmers.csv  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k15.scaled5.sig.zip.kmers.pq  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k15.scaled5.sig.zip.rocksdb.manysketch.csv  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k15.scaled5.sig.zip.siglist  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k16.scaled5.sig.zip.kmers.pq  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k16.scaled5.sig.zip.manysketch.csv  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.hp.k16.scaled5.sig.zip.siglist  bcl2_first25_uniprotkb_accession_O43236_OR_accession_2025_02_06.fasta.gz.manysketch.csv  ced9-bcl2-first25.hp.k16.manysearch.csv  uniprotkb_gene_bcl2_AND_reviewed_true_2025_06_04.xml
(+26 files in other folders)
