[package]
name = "kmerseek"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kmerseek"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "anyhow"] }
anyhow = "1.0"
rayon = "1.10"
rand = "0.9.1"
sourmash = { version = "0.20.0", features = ["branchwater"] }
quick-xml = "0.37.5"
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
needletail = "0.6.3"
sourmash_plugin_branchwater = { path = "/Users/olga/code/kmerseek/REFERENCE_sourmash_plugin_branchwater" }
zip = { version = "4.0", default-features = false }

[dev-dependencies]
tempfile = "3.20"
