[package]
name = "kmerseek"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kmerseek"
crate-type = ["cdylib", "rlib"]
path = "src/rust/lib.rs"

[[bin]]
name = "kmerseek-rust"
path = "src/rust/main.rs"

[dependencies]
pyo3 = { version = "0.25.0", features = [
    "extension-module",
    "anyhow",
], optional = true }
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
rayon = "1.10"
rand = "0.9.1"
sourmash = { version = "0.20.0", features = ["branchwater"] }
quick-xml = "0.37.5"
rocksdb = "0.23.0"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
needletail = "0.6.3"
clap = { version = "4.4", features = ["derive"] }
# PR: https://github.com/sourmash-bio/sourmash_plugin_branchwater/pull/657
sourmash_plugin_branchwater = { git = "https://github.com/sourmash-bio/sourmash_plugin_branchwater", rev = "585dabf4f50239dbcf56dddf94a7ed181fc03046" }
zip = { version = "4.0", default-features = false }

[features]
default = ["python"]
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.20"
memuse = "0.2.0"
criterion = "0.5.1"
human_bytes = "0.4.3"
half = "=2.2.1"
assert_cmd = "2.0"
predicates = "3.0"
cargo-tarpaulin = "0.28"

[profile.release]
debug = "line-tables-only"

[[example]]
name = "test_bcl2_processing"
path = "examples/test_bcl2_processing.rs"

[[bench]]
name = "benchmark"
harness = false
